<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:background="@drawable/linear_gradient_login"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:id="@+id/imgLogin"
                android:layout_centerInParent="true"
                android:background="@drawable/person_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:id="@+id/tvAppName"
                android:textColor="#fff"
                android:text="@string/main_login_lbl"
                android:textStyle="bold"
                android:layout_below="@+id/imgLogin"
                android:layout_marginTop="30dp"
                android:layout_alignParentRight="true"
                android:textSize="20dp"
                />


        </RelativeLayout>

    </FrameLayout>


    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/txtOrgID"
        android:maxLines="1"
        android:padding="6dp"
        android:drawableLeft="@drawable/orgid_logo"
        android:hint="@string/orgID"
        android:backgroundTint="#FFF"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center"
        android:elevation="5.0dp"
        android:layout_marginTop="20dp"
        />

   <!-- <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkboxOrgID"
        android:text="@string/rememberorgid"
        android:padding="6dp"
       android:layout_gravity="center"
        />
-->
  <!--  <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/txtEmail"
        android:padding="6dp"
        android:drawableLeft="@drawable/mail_logo"
        android:hint="@string/username"
        android:backgroundTint="#FFF"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center"
        android:elevation="5.0dp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:padding="6dp"
        android:drawableLeft="@drawable/password_logo"
        android:hint="@string/password"
        android:backgroundTint="#FFF"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center"
        android:elevation="5.0dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvContactAdmin"
        android:text="@string/contact_admin"
        android:layout_gravity="right"
        android:padding="5dp"
        android:layout_marginTop="20dp"/>-->

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/btnLogin"
        android:text="@string/submitbtn"
        android:gravity="center"
        android:textColor="#fff"
        android:background="@drawable/button_gradient"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />
</LinearLayout>